# VkTest

./: local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/leon/graph/test/: MainActivity.java  VkDemo.java
app/src/main/jni/: CMakeLists.txt  g_vulkan.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
